Working routing version for the test page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1859 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/elements/study_search_result_test.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result_test.html
@@ -46,10 +46,31 @@
 
         return emptyQuery;
     };
+	
+	function getQuery() {
+		
+		// Get the hash...
+		var hash = window.location.hash;
+		
+		if (hash){
+		
+			// Remove hash
+			hash = hash.substring(1);
+			
+			return JSON.parse(hash);
+			
+		} else {
+			//If there is something
+			return getEmptyQuery();
+		}
+		
+	};
+	
+
 
     // Initialize the pager
     var pager;
-    var query = getEmptyQuery();
+    var query = getQuery();
     var asideText;
 
     document.addEventListener('polymer-ready', function() {
@@ -73,8 +94,8 @@
 	
 	
 	window.onpopstate = function(event) {
-  		query = JSON.parse(window.location.hash);
-		alert(window.location.hash);
+  		query = getQuery();
+		search(true);
 	};
 
 
