Audit util for study files, tests AccessionDAO CRUD in StudyDAO.

--- a/metabolights-webapps/src/main/webapp/elements/study_search_result.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result.html
@@ -47,7 +47,7 @@
 			<div class="search_study">
 				<h4><a href="{{study.studyIdentifier}}">{{study.title}}</a></h4>
 				<span class="search_owners">
-				by
+				submitted by
 				<template repeat="{{o in study.users}}">
 					<a href="mailto:{{o.userName}}">{{o.firstName}} {{o.lastName}}</a>
 				</template>
