--- a/metabolights-webapps/src/main/webapp/elements/metabolights_facet.html
+++ b/metabolights-webapps/src/main/webapp/elements/metabolights_facet.html
@@ -85,7 +85,7 @@
 					var lineName = "";
 
 					if (facetLine.value == "") {
-						lineName = "[empty]";
+						lineName = "no " + displayname;
 					} else {
 						lineName = facetLine.value;
 					}
