--- a/metabolights-webapps/src/main/webapp/elements/study_search_result.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result.html
@@ -73,14 +73,14 @@
 					</div>
 				</div>				
 				<div class="search_study_id">
-					<a href="{{study.studyIdentifier}}">{{study.studyIdentifier}}</a> is the accession identifier and
+					<a href="{{study.studyIdentifier}}">{{study.studyIdentifier}}</a> is the accession identifier and the status is {{study.studyStatus}}. It
 					<template if="{{study.publicStudy}}">
 						was released on the
 					</template>
 					<template if="{{!study.publicStudy}}">
 						will be release on the
 					</template>
-					<strong>{{study.studyPublicReleaseDate}}</strong>
+					<strong>{{study.studyPublicReleaseDate| formatDate}}</strong>
 					<template if="{{!study.publicStudy}}">
 						<div class="icon icon-functional" data-icon="l"></div>
 					</template>
@@ -94,6 +94,9 @@
 			publish:{
 			},
 			ready: function () {
+			},
+			formatDate: function (date){
+				return (new Date(date));
 			}
 			
 		});
