Bugfix: connection closed error? , now testing the connection.isValid() before using it (since pool doesn't seem to do it). ES-search: unlimited facet items (all, not only 10)

--- a/metabolights-webapps/src/main/webapp/elements/metabolights_facet.html
+++ b/metabolights-webapps/src/main/webapp/elements/metabolights_facet.html
@@ -85,7 +85,7 @@
 					var lineName = "";
 
 					if (facetLine.value == "") {
-						lineName = "no " + displayname;
+						lineName = "no " + this.displayname;
 					} else {
 						lineName = facetLine.value;
 					}
