--- a/metabolights-webapps/src/main/webapp/elements/study_search_result.html
+++ b/metabolights-webapps/src/main/webapp/elements/study_search_result.html
@@ -22,27 +22,36 @@
 <link rel="import" href="study_search_result_layout.html">
 <link rel="import" href="study_search_result_colors.html">
 <link rel="import" href="ebi_styles.html">
-<polymer-element name="search-result" attributes="searchresponse">
+<polymer-element name="search-result" attributes="searchresponse noresultmessage header">
 	<template>
 		<core-style ref="ssr_layout"></core-style>
 		<core-style ref="ssr_colors"></core-style>
 		<core-style ref="ebi_styles"></core-style>
 		<link rel="stylesheet" href="../cssrl/test-scheme.css">
+		<h2>{{header}}</h2>
+		<!--Header: No results-->
 		<template if="{{searchresponse.results.length == 0}}">
-			<h3>Your search
+			<h3>
 				<template if="{{searchresponse.query.text !=''}}">
-					,&nbsp;<span class="searchterm">{{searchresponse.query.text}}</span>,
+					 Your search,&nbsp;<span class="searchterm">{{searchresponse.query.text}}</span>, did not match any documents.
 				</template>
-				did not match any documents.</h3>
+				<template if="{{searchresponse.query.text ==''}}">
+					&nbsp;{{noresultmessage}}
+				</template>
+
+
+			</h3>
 		</template>
+		<!-- Headers: some results -->
 		<template if="{{searchresponse.results.length != 0}}">
-			<h2>
+			<h3>
 				MetaboLights found {{searchresponse.query.pagination.itemsCount}} results
 				<template if="{{searchresponse.query.text !=''}}">
 					for <span class="searchterm">{{searchresponse.query.text}}</span>
 				</template>
-			</h2>
+			</h3>
 		</template>
+
 		<template repeat="{{study in searchresponse.results}}">
 			<div class="search_study">
 				<h4><a href="{{study.studyIdentifier}}">{{study.title}}</a></h4>
