--- a/metabolights-webapps/src/main/webapp/elements/metabolights_facets_layout.html
+++ b/metabolights-webapps/src/main/webapp/elements/metabolights_facets_layout.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../polymer/bower_components/core-style/core-style.html">
 <core-style id="facets_layout">  
 	<style>
+		:host {
+			padding-left: 4px;
+		}
 		* {
 			-webkit-box-sizing: border-box;
 			-moz-box-sizing: border-box;
