Updated with latest scripts from prod server

--- a/metabolights-webapps/src/main/webapp/index.html
+++ b/metabolights-webapps/src/main/webapp/index.html
@@ -23,14 +23,14 @@
 <html>
 	<head>
 <!--	    <meta http-equiv="REFRESH" content="0;url=index">-->
-		
+
 	</head>
 	<body>
-	<h2 class="">Hello Adriano</h2>
-		
+	<h2 class="">Hi</h2>
+
 	<script>
 			write(JSON.stringify(document.body));
 	</script>
-	
+
 	</body>
 </html>
