--- a/metabolights-webapps/src/main/webapp/ngeditor/index.html
+++ b/metabolights-webapps/src/main/webapp/ngeditor/index.html
@@ -15,12 +15,16 @@
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
- <link href="styles.8da2364522e0749f90c2.bundle.css" rel="stylesheet"/></head>
+  <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.32.0/handsontable.full.css">
+ <link href="styles.764212209b2e59f67965.bundle.css" rel="stylesheet"/></head>
 <body>
+<script>
+  localStorage.setItem("apiToken", "cc16e565-6d25-4400-988a-2f392cf7c207");
+</script>
 <div class="container">
   <h4>MetaboLights Study Editor</h4>
-<isa-json-editor studyID="MTBLS1"></isa-json-editor>
+  <app-test-version studyID="MTBLS1"></app-test-version>
+  <!--<isa-json-editor studyID="MTBLS1"></isa-json-editor>-->
 </div>
-<script type="text/javascript" src="inline.ad524c6b780641053215.bundle.js"></script><script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script><script type="text/javascript" src="vendor.7e6a69c84c03fbb88920.bundle.js"></script><script type="text/javascript" src="main.7e591867fb314b95649a.bundle.js"></script></body>
+<script type="text/javascript" src="inline.ffa9c0b3f9b8e8446326.bundle.js"></script><script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script><script type="text/javascript" src="vendor.e928ce39e73e37a84a27.bundle.js"></script><script type="text/javascript" src="main.0fe95b657cbb70f87faa.bundle.js"></script></body>
 </html>
