--- a/metabolights-webapps/src/main/webapp/advsearch/index.html
+++ b/metabolights-webapps/src/main/webapp/advsearch/index.html
@@ -1,24 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>AdvancedSearch</title>
-    <base href="/">
+  <meta charset="utf-8">
+  <title>AdvancedSearch</title>
+  <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="styles.bb26d335f22939ac90d1.bundle.css" rel="stylesheet"/></head>
 <body>
 <div class="container">
-    <mtbls-adv-search>Loading...</mtbls-adv-search>
+  <mtbls-adv-search>Loading...</mtbls-adv-search>
 </div>
-<script type="text/javascript" src="inline.bundle.js"></script>
-<script type="text/javascript" src="polyfills.bundle.js"></script>
-<script type="text/javascript" src="styles.bundle.js"></script>
-<script type="text/javascript" src="vendor.bundle.js"></script>
-<script type="text/javascript" src="main.bundle.js"></script>
-</body>
+<script type="text/javascript" src="inline.5ff79d9d5cc46eb6f6dc.bundle.js"></script><script type="text/javascript" src="polyfills.ed762e38550b1ba74505.bundle.js"></script><script type="text/javascript" src="vendor.f1967bd5c017fba09684.bundle.js"></script><script type="text/javascript" src="main.6358c413deefc3a9591e.bundle.js"></script></body>
 </html>
