Study editor permission fixes

--- a/metabolights-webapps/src/main/webapp/ngeditor/index.html
+++ b/metabolights-webapps/src/main/webapp/ngeditor/index.html
@@ -18,14 +18,14 @@
   <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.32.0/handsontable.full.css">
  <link href="styles.32b2992df6194aa895ed.bundle.css" rel="stylesheet"/></head>
 <body>
-<script>
-  localStorage.setItem("apiToken", "cc16e565-6d25-4400-988a-2f392cf7c207");
-</script>
+<!--<script>-->
+  <!--localStorage.setItem("apiToken", "cc16e565-6d25-4400-988a-2f392cf7c207");-->
+<!--</script>-->
 <div class="container">
   <h4>MetaboLights Study Editor</h4>
-  <app-study-editor studyID="MTBLS2"></app-study-editor>
+  <app-study-editor studyID="MTBLS1"></app-study-editor>
 
   <!--<isa-json-editor studyID="MTBLS1"></isa-json-editor>-->
 </div>
-<script type="text/javascript" src="inline.fd1c10b66e462527f638.bundle.js"></script><script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script><script type="text/javascript" src="vendor.4d9b987a0f2849e3adcf.bundle.js"></script><script type="text/javascript" src="main.61f6345456064166711c.bundle.js"></script></body>
+<script type="text/javascript" src="inline.f3a8c0335573c8a91cec.bundle.js"></script><script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script><script type="text/javascript" src="vendor.4d9b987a0f2849e3adcf.bundle.js"></script><script type="text/javascript" src="main.993e0dfb9c53bf7ce876.bundle.js"></script></body>
 </html>
