--- a/metabolights-webapps/src/main/webapp/ngeditor/index.html
+++ b/metabolights-webapps/src/main/webapp/ngeditor/index.html
@@ -27,5 +27,9 @@
 
   <!--<isa-json-editor studyID="MTBLS1"></isa-json-editor>-->
 </div>
-<script type="text/javascript" src="inline.251b3ea3738459c4b45f.bundle.js"></script><script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script><script type="text/javascript" src="vendor.4d9b987a0f2849e3adcf.bundle.js"></script><script type="text/javascript" src="main.1da50fc5a66e83bcc770.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bc237751263bde910b3e.bundle.js"></script>
+<script type="text/javascript" src="polyfills.63929c2b04758c996018.bundle.js"></script>
+<script type="text/javascript" src="vendor.4d9b987a0f2849e3adcf.bundle.js"></script>
+<script type="text/javascript" src="main.b9ce140e354164637e8a.bundle.js"></script>
+</body>
 </html>
