Minor local https bug fixes and other css changes

--- a/metabolights-webapps/src/main/webapp/WEB-INF/static/speciescopetest.html
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/static/speciescopetest.html
@@ -55,7 +55,7 @@
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
     var margin = 10,
