--- a/metabolights-webapps/src/main/webapp/advsearch/index.html
+++ b/metabolights-webapps/src/main/webapp/advsearch/index.html
@@ -1,6 +1,6 @@
-<!doctype html>
-<html>
-<head>
+<html><head><script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script>
+
+
   <meta charset="utf-8">
   <title>AdvancedSearch</title>
   <base href="/">
@@ -9,10 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
 <div class="container">
   <mtbls-adv-search>Loading...</mtbls-adv-search>
 </div>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-</html>
+
+</body></html>
